<resources>
    <string name="app_name">IReader</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="addBook">加入书架</string>
    <string name="toBottom">直达底部</string>
    <string name="lastChapter">最新章节：</string>
    <string name="state">状态：</string>
    <string name="wordNumber">字数：</string>
    <string name="updateDate">更新时间：</string>
    <string name="contentDetail">内容简介： </string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="xlistview_footer_hint_loading">正在加载更多...</string>
    <string name="xlistview_footer_hint_complete">已加载完全部</string>
</resources>
