<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_toolbar"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e7f4fe">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNovelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    tools:text="永恒建筑"/>

                <TextView
                    android:id="@+id/tvNovelAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/subTextColor"
                    android:textSize="14dp"
                    android:layout_marginLeft="10dp"
                    tools:text="作者：公开"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"
                    android:text="@string/addBook"
                    android:background="@drawable/selector_btn_green_bg"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"
                    android:text="@string/addBook"
                    android:background="@drawable/selector_btn_green_bg"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:text="@string/addBook"
                    android:background="@drawable/selector_btn_green_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/subTextColor"
                    android:textSize="14sp"
                    android:text="@string/lastChapter"/>

                <TextView
                    android:id="@+id/tvChapter"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    tools:text="第八百一十章 挑衅 二"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/subTextColor"
                    android:textSize="14sp"
                    android:text="@string/state"/>

                <TextView
                    android:id="@+id/tvChapterState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    tools:text="连载中"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/subTextColor"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"
                    android:text="@string/wordNumber"/>

                <TextView
                    android:id="@+id/tvChapterNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    tools:text="23432432"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/subTextColor"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"
                    android:text="@string/updateDate"/>

                <TextView
                    android:id="@+id/tvChapterDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    tools:text="10-30"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvChapterContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/subTextColor"
                    android:textSize="14sp"
                    tools:text="内容简介：穿越仙侠世界，以属性异能，成就无上霸主。 欢迎来到我的世界..... 书友群请搜永恒剑主，qq群为公众群，大家随意加。"/>
            </LinearLayout>

            <com.example.ireader.view.MyListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:scrollbars="vertical"
                android:cacheColorHint="#00000000"
                tools:listitem="@layout/item_list_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>